<resources>
    <string name="app_name">HelloAndroid</string>
    <string name="free">Free online courses and Nanodegrees</string>
    <string name="androiddev">Android\nDeveloper</string>
    <string name="webdev">Web\nDeveloper</string>
    <string name="vrdev">VR\nDeveloper</string>
    <string name="ba">Business\nAnalyst</string>
    <string name="more">&#8230;and so much more&#8230;</string>
    <string name="udacity">Udacity</string>
    <string name="phone">650&#8211;555&#8211;5555</string>
    <string name="address">2465 Latham St\nMountain View, CA 94043</string>
    <string name="url">www.udacity.com</string>
</resources>
