<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.example.android.helloandroid.MainActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
 <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="0dp"
     android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/elearning5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/elearning5" />
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/free"
            android:paddingBottom="8dp"
            android:paddingLeft="8dp"
            android:scaleType="centerInside"
            android:src="@drawable/udacity4" />
        <TextView
            android:id="@+id/free"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/elearning5"
            android:background="#03a9f4"
            android:fontFamily="sans-serif-light"
            android:gravity="center"
            android:paddingBottom="8dp"
            android:paddingTop="8dp"
            android:textAllCaps="true"
            android:textColor="#ffffff"
            android:textSize="18dp"
            android:textStyle="bold"
            android:text="@string/free" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="8"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="18dp"
        android:orientation="horizontal">
        <TextView
            style="@style/text1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/androiddev" />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/androiddev1" />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/webdev2" />
        <TextView
            style="@style/text1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/webdev" />
    </LinearLayout>
        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="8"
        android:layout_marginBottom="12dp"
        android:layout_marginTop="12dp"
        android:orientation="horizontal">
        <TextView
            style="@style/text1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:text="@string/vrdev" />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/vrdev1" />
        <ImageView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@drawable/ba1" />
        <TextView
            style="@style/text1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ba" />
    </LinearLayout>
            <TextView
                style="@style/text1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:gravity="center"
                android:textAppearance="?android:textAppearanceMedium"
                android:text="@string/more" />
    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:layout_marginRight="26dp"
            android:layout_marginBottom="26dp"
            android:orientation="vertical">
            <TextView
                style="@style/text2"
                android:text="@string/udacity" />
            <TextView
                style="@style/text2"
                android:gravity="right"
                android:text="@string/address"
                android:autoLink="map"/>
            <TextView
                style="@style/text2"
                android:text="@string/phone"
                android:autoLink="phone"/>
            <TextView
                style="@style/text2"
                android:text="@string/url"
                android:autoLink="web"/>
        </LinearLayout>
 </LinearLayout>
</ScrollView>